--- a/src/imagelaunch/FXMLDocument.fxml
+++ b/src/imagelaunch/FXMLDocument.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -22,7 +23,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="642.0" prefWidth="872.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="borderPrincipal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="642.0" prefWidth="872.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.FXMLDocumentController">
    <left>
       <VBox prefHeight="112.0" prefWidth="243.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -43,22 +44,7 @@
                   <Button ellipsisString="Go" mnemonicParsing="false" text="Go" />
                </children>
             </HBox>
-            <GridPane prefHeight="393.0" prefWidth="149.0" style="-fx-border-color: #BFBFBF; -fx-border-radius: 2;">
-              <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <VBox.margin>
-                  <Insets top="3.0" />
-               </VBox.margin>
-            </GridPane>
+            <ListView fx:id="listeImages" prefHeight="409.0" prefWidth="243.0" style="-fx-background-color: #E1D5E7;" />
          </children>
       </VBox>
    </left>
@@ -128,7 +114,7 @@
    <top>
       <BorderPane prefHeight="116.0" prefWidth="828.0" BorderPane.alignment="CENTER">
          <left>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="55.0" prefWidth="193.0" text="dossier" translateX="17.0" BorderPane.alignment="CENTER">
+            <Button fx:id="buttonDirectoryChooser" alignment="CENTER" mnemonicParsing="false" onAction="#openDirectory" prefHeight="55.0" prefWidth="193.0" text="dossier" translateX="17.0" BorderPane.alignment="CENTER">
                <graphic>
                   <ImageView fitHeight="45.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
                      <image>
