--- a/src/imagelaunch/Parametre.fxml
+++ b/src/imagelaunch/Parametre.fxml
@@ -1,11 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.ParametreController">
-    
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="600.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.ParametreController">
+   <children>
+      <Label layoutX="274.0" prefHeight="38.0" prefWidth="182.0" text="Options" />
+      <TabPane layoutX="56.0" layoutY="53.0" prefHeight="200.0" prefWidth="510.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Général">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="251.0" prefWidth="510.0" style="-fx-background-color: white;">
+                     <children>
+                        <Label layoutX="28.0" layoutY="86.0" text="Formats supportés :" />
+                        <Label layoutX="137.0" layoutY="86.0" text="PNG , JPEG" />
+                        <Label layoutX="23.0" layoutY="41.0" text="_ Dossier par défaut _" />
+                        <TextField layoutX="148.0" layoutY="37.0" prefHeight="25.0" prefWidth="275.0" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Langues">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: white;">
+                     <children>
+                        <ChoiceBox id="choicebox" layoutX="14.0" layoutY="23.0" prefHeight="25.0" prefWidth="135.0" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+      <Button layoutX="192.0" layoutY="277.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="OK" />
+      <Button layoutX="274.0" layoutY="277.0" mnemonicParsing="false" text="Annuler" />
+   </children>
 </AnchorPane>
