--- a/src/imagelaunch/FXMLDocument.fxml
+++ b/src/imagelaunch/FXMLDocument.fxml
@@ -38,22 +38,7 @@
                   <Button ellipsisString="Go" mnemonicParsing="false" text="Go" />
                </children>
             </HBox>
-            <GridPane prefHeight="408.0" prefWidth="243.0" style="-fx-border-color: #BFBFBF; -fx-border-radius: 2;">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <ListView fx:id="listeImages" prefHeight="409.0" prefWidth="243.0" style="-fx-background-color: #E1D5E7;" />
-                  <Label fx:id="folderMessage" prefHeight="184.0" prefWidth="241.0" text="    VEILLEZ CHOISIR UN DOSSIER" textFill="#0f0f0f">
-                     <font>
-                        <Font name="System Bold Italic" size="11.0" />
-                     </font>
-                  </Label>
-               </children>
-            </GridPane>
+            <ListView fx:id="listeImages" prefHeight="409.0" prefWidth="243.0" style="-fx-background-color: #E1D5E7;" />
          </children>
       </VBox>
    </left>
@@ -63,18 +48,20 @@
             <GridPane prefHeight="467.0" prefWidth="324.0" style="-fx-border-color: #BFBFBF; -fx-border-radius: 2;" translateX="10.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <VBox.margin>
                   <Insets />
                </VBox.margin>
-               <children>
-                  <ImageView fx:id="imageSelected" fitHeight="406.0" fitWidth="388.0" pickOnBounds="true" preserveRatio="true" />
-               </children>
             </GridPane>
-            <HBox fx:id="ImageEditOption" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0" translateX="5.0" visible="false">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0" translateX="5.0">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -143,7 +130,7 @@
       </BorderPane>
    </top>
    <right>
-      <BorderPane translateY="80.0" BorderPane.alignment="CENTER">
+      <BorderPane style="-fx-background-color: #;" translateY="80.0" BorderPane.alignment="CENTER">
          <center>
             <GridPane style="-fx-border-color: #BFBFBF; -fx-border-radius: 2;" translateY="-200.0" BorderPane.alignment="CENTER">
                <columnConstraints>
@@ -166,15 +153,15 @@
                         <Insets top="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <TextField fx:id="nomImage" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets top="-20.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="motCle" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <children>
-                        <Label fx:id="typeImg" text="Label">
+                        <Label text="Label">
                            <HBox.margin>
                               <Insets top="5.0" />
                            </HBox.margin>
@@ -183,7 +170,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <children>
-                        <Label fx:id="tailleImg" text="Label">
+                        <Label text="Label">
                            <HBox.margin>
                               <Insets top="5.0" />
                            </HBox.margin>
