--- a/src/imagelaunch/FXMLDocument.fxml
+++ b/src/imagelaunch/FXMLDocument.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -17,7 +24,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderPrincipal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="642.0" prefWidth="872.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.FXMLDocumentController">
+<BorderPane fx:id="borderPrincipal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="642.0" prefWidth="872.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.FXMLDocumentController">
    <left>
       <VBox prefHeight="112.0" prefWidth="243.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -89,17 +96,17 @@
                         <Image url="@../Ressources/rotate_right.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="btnprevious" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#previous" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                      <image>
                         <Image url="@../Ressources/skip-forward.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="btnDiapo" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#diaporama" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../Ressources/play.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="btnforward" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#forward" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../Ressources/skip-forward.png" />
                      </image>
