--- a/src/imagelaunch/Parametres.fxml
+++ b/src/imagelaunch/Parametres.fxml
@@ -8,19 +8,19 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="600.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.ParametreController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="600.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.Parametres">
    <children>
       <Label layoutX="274.0" prefHeight="38.0" prefWidth="182.0" text="Options" />
-      <TabPane layoutX="56.0" layoutY="53.0" prefHeight="200.0" prefWidth="510.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="mytab" layoutX="56.0" layoutY="53.0" prefHeight="200.0" prefWidth="510.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Général">
+          <Tab fx:id="mytab_general" text="Général">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="251.0" prefWidth="510.0" style="-fx-background-color: white;">
                      <children>
                         <Label layoutX="28.0" layoutY="86.0" text="Formats supportés :" />
                         <Label layoutX="137.0" layoutY="86.0" text="PNG , JPEG" />
                         <Label layoutX="23.0" layoutY="41.0" text="_ Dossier par défaut _" />
-                        <TextField layoutX="148.0" layoutY="37.0" prefHeight="25.0" prefWidth="275.0" />
+                        <TextField fx:id="repertory" layoutX="148.0" layoutY="37.0" prefHeight="25.0" prefWidth="275.0" />
                      </children>
                   </AnchorPane>
             </content>
