--- a/src/imagelaunch/FXMLDocument.fxml
+++ b/src/imagelaunch/FXMLDocument.fxml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -24,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderPrincipal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="642.0" prefWidth="872.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.FXMLDocumentController">
+<BorderPane fx:id="borderPrincipal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="642.0" prefWidth="872.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.FXMLDocumentController">
    <left>
       <VBox prefHeight="112.0" prefWidth="243.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -141,12 +134,15 @@
          <right>
             <HBox prefHeight="37.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" style="-fx-background-color: #8C98A0;" text="FR" textFill="#f2ecec" translateY="45.0" />
-                  <Button mnemonicParsing="false" text="EN" translateY="45.0" />
-                  <Button mnemonicParsing="false" text="AR" translateY="45.0" />
+                  <Button mnemonicParsing="false" onAction="#btnFR" style="-fx-background-color: #8C98A0;" text="FR" textFill="#f2ecec" translateY="45.0" />
+                  <Button mnemonicParsing="false" onAction="#btnEN" text="EN" translateY="45.0" />
+                  <Button mnemonicParsing="false" onAction="#btnAR" text="AR" translateY="45.0" />
                </children>
             </HBox>
          </right>
+         <center>
+            <Label fx:id="output" BorderPane.alignment="CENTER" />
+         </center>
       </BorderPane>
    </top>
    <right>
