--- a/src/imagelaunch/Parametres.fxml
+++ b/src/imagelaunch/Parametres.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +11,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="600.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.Parametres">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="600.0" style="-fx-background-color: #E1D5E7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imagelaunch.Parametres">
    <children>
       <Label fx:id="optionsAction" layoutX="274.0" prefHeight="38.0" prefWidth="182.0" text="Options" />
       <TabPane fx:id="mytab" layoutX="56.0" layoutY="53.0" prefHeight="200.0" prefWidth="510.0" tabClosingPolicy="UNAVAILABLE">
@@ -18,9 +21,9 @@
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="251.0" prefWidth="510.0" style="-fx-background-color: white;">
                      <children>
                         <Label fx:id="format_lbl" layoutX="28.0" layoutY="86.0" text="Formats supportés  :" />
-                        <Label layoutX="137.0" layoutY="86.0" text="PNG    ,   JPEG" />
+                        <Label fx:id="labelType" layoutX="170.0" layoutY="86.0" prefHeight="15.0" prefWidth="327.0" />
                         <Label fx:id="dossier_lbl" layoutX="23.0" layoutY="41.0" text="_ Dossier temporaire _" />
-                        <TextField fx:id="repertory" layoutX="148.0" layoutY="37.0" prefHeight="25.0" prefWidth="275.0" />
+                        <TextField fx:id="repertory" layoutX="170.0" layoutY="36.0" prefHeight="25.0" prefWidth="275.0" />
                      </children>
                   </AnchorPane>
             </content>
